--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,5 +1,5 @@
-
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/very_big"
         android:orientation="vertical"
-        android:padding="@dimen/big">
+        android:padding="@dimen/big"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        // field
+        <!-- field -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -29,25 +29,56 @@
             android:paddingLeft="@dimen/super_small">
 
             <EditText
-                android:layout_height="wrap_content"
+                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
-               android:id="@+id/edit_name"
+               android:layout_height="wrap_content"
                 android:hint="@string/hint_name"
                 android:inputType="textCapWords"
                 android:maxLength="20"/>
 
             <EditText
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
                 android:id="@+id/edit_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:hint="@string/hint_price"
                 android:inputType="numberDecimal"/>
 
+
             <RelativeLayout
+                android:id="@+id/Layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
 
+                <!-- minus button-->
+                <ImageButton
+                    android:id="@+id/minusButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:contentDescription="@string/minus_button"
+                    android:src="@drawable/baseline_minimize_24"/>
+                <!-- quantity -->
+                <EditText
+                    android:id="@+id/edit_space"
+                    android:layout_width="@dimen/super_big"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/minusButton"
+                    android:gravity="center"
+                    android:hint="@string/hint_quantity"
+                    android:inputType="number"/>
+
+                <!-- plus button-->
+                  <ImageButton
+                      android:id="@+id/plus_button"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_toRightOf="@id/edit_space"
+                      android:clickable="true"
+                      android:contentDescription="@string/plus_button"
+                      android:focusable="false"
+                      android:src="@drawable/baseline_add_24"
+                      android:text="@string/tap_call"/>
 
             </RelativeLayout>
 
@@ -55,5 +86,66 @@
 
     </LinearLayout>
 
-    </LinearLayout>
+       <LinearLayout
+           android:id="@+id/space_measurment"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"/>
+
+      <!-- Input area -->
+      <RelativeLayout
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:weight="2"
+          android:clipToPadding="false"
+          android:paddingBottom="@dimen/big"
+          android:paddingStart="@dimen/super_small"
+          android:paddingLeft="@dimen/super_small">
+          
+          <EditText
+              android:id="@+id/edit_suppliername"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:hint="@string/hint_supplier_name"
+              android:inputType="textCapWords"
+              android:maxLength="20"/>
+
+          <!-- Supplier -->
+          <EditText
+              android:id="@+id/supplierphone"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@id/edit_suppliername"
+              android:hint="@string/hint_supplier_phone"
+              android:inputType="number"
+              android:maxLength="11"/>
+          
+          <ImageButton
+              android:id="@+id/phoneButton"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@id/supplierphone"
+              android:layout_centerInParent="true"
+              android:layout_marginBottom="@dimen/small"
+              android:clickable="true"
+              android:contentDescription="@string/phone_image"
+              android:focusable="false"
+              android:focusableInTouchMode="false"
+              android:src="@drawable/baseline_call_24"/>
+
+          <!-- Delete -->
+
+          <android.support.design.widget.FloatingActionButton
+              android:layout_height="wrap_content"
+              android:layout_width="wrap_content"
+              android:id="@+id/delete_items"
+              android:layout_alignParentBottom="true"
+              android:layout_alignParentRight="true"
+              android:layout_marginRight="@dimen/small"
+              android:src="@drawable/baseline_add_24"/>
+
+      </RelativeLayout>
+
+
+
 </ScrollView>
