--- a/app/src/main/res/layout/catalog_activity.xml
+++ b/app/src/main/res/layout/catalog_activity.xml
@@ -51,7 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:src="@drawable/baseline_close_24"/>
 
 
 </RelativeLayout>
