--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -46,8 +46,6 @@
         android:layout_height="wrap_content"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="@string/sale_b" />
+        android:text="@string/sale_button" />
 </LinearLayout>
-
-
 </LinearLayout>
