--- a/app/src/main/res/layout/catalog_activity.xml
+++ b/app/src/main/res/layout/catalog_activity.xml
@@ -3,39 +3,36 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
     <RelativeLayout
         android:id="@+id/empty_space"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_centerInParent="true" >
-    <ImageView
-        android:id="@+id/classic_store"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="47dp"
-        android:layout_marginRight="47dp"
-        android:layout_marginBottom="7dp"
-        android:src="@drawable/classic_store"/>
-
-    <TextView
-        android:id="@+id/empty_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/classic_store"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="16dp"
-        android:text="@string/opps_its_empty"
-        android:fontFamily="serif"/>
-
+        android:layout_centerInParent="true" >
+        <!-- CHANGED THE DP TO 130 TO CENTER THE 'layout_marginEnd"-->
+        <ImageView
+            android:id="@+id/classic_store"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="130dp"
+            android:layout_marginRight="90dp"
+            android:layout_marginBottom="7dp"
+            android:src="@drawable/classic_store"/>
+        <TextView
+            android:id="@+id/empty_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/classic_store"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="16dp"
+            android:text="@string/opps_its_empty"
+            android:fontFamily="serif"/>
         <TextView
             android:id="@+id/empty_sub_text"
             android:layout_width="wrap_content"
@@ -44,16 +41,13 @@
             android:layout_centerHorizontal="true"
             android:paddingTop="8dp"
             android:text="@string/add_inventory_data"/>
-
     </RelativeLayout>
-
+    <!-- PUT IN NEW ID OF "FAB"-->
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:src="@drawable/baseline_close_24"/>
-
-
 </RelativeLayout>
-
